[workspace]
members = []

[workspace.package]
version       = "0.0.0"
authors       = ["larry <gm@larry.engineer>"]
edition       = "2021"
rust-version  = "1.69.0"
license       = "Apache-2.0"
homepage      = "https://larry.engineer"
repository    = "https://github.com/larry0x/osmosis-proto"
documentation = "https://github.com/larry0x/osmosis-proto#readme"
keywords      = ["osmosis", "protobuf"]

[workspace.dependencies]
